--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres:qDQQ6RRJ43O3t6n@db.gqthnyyhumxfqrfbmrrl.supabase.co:5432/mydb?schema=public"
+DATABASE_PASSWORD="qDQQ6RRJ43O3t6n"
