--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@vercel/analytics": "^1.1.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
