--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:qDQQ6RRJ43O3t6n@db.gqthnyyhumxfqrfbmrrl.supabase.co:5432/mydb?schema=public"
-DATABASE_PASSWORD="qDQQ6RRJ43O3t6n"
+DATABASE_URL="postgresql://can:AirH-Ohojd8Hb5_qDrpg5w@can-blog-12845.7tt.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full"
+DATABASE_PASSWORD="AirH-Ohojd8Hb5_qDrpg5w"
